			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * CLEANUP: Some cleanup to declarations and stack-shifter, preparing
    combining the stack-shifter in the normal version.

  * FIXED: memory leak involving GMP numbers for instantiated `output'
    arguments.  I.e. 0 is 2727 rdiv 22.  Mike Elston.

  * ADDED: Sset_filter() to formalize a filter relation between streams.
    Incomplete.

===============================
VERSION 5.6.34 (April 23, 2007)
===============================

  * ADDED: Cross-referencer handles integer arguments in meta-predicate
    declarations.

  * FIXED: possible scenario where atom garbage collection is no longer
    automatically started, running out of memory.  Mike Elston.

  * ENHANCED: parse_url(-, +) does not include HTTP port if this is 80.

  * FIXED: Bug#27: incorrect failure of PL_get_pointer().  Paul
    Singleton.

===============================
VERSION 5.6.33 (April 06, 2007)
===============================

  * FIXED: Body decompilation with very large terms.  Mike Elston.

  * FIXED: PL_set_engine() to properly release the old engine.  With
    patch from Ramakrishna Venkatraman.

  * TEST: Some small issues that make it possible to mix the old and
    new test framework so we can use PlUnit for testing libraries and
    have it working from "make check".

  * FIXED: Error warnings on illegal 1st byte in UTF-8 sequences.
    Also fixed utf-8 decoding test suite.

  * ADDED: library(rbtrees), providing Red-Black trees.  Copied with
    permission from Yap.  Details of the library are still under
    discussion.


===============================
VERSION 5.6.32 (March 26, 2007)
===============================

  * ENHANCED: library(debug).  Warn if topic is not registered and include