@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Reporting finished threads using current_thread/2
+
   * CLEANUP: Some cleanup to declarations and stack-shifter, preparing
     combining the stack-shifter in the normal version.
 
